WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139832
Plug leak below LLVMCopyStringRepOfTargetData().
https://bugs.webkit.org/show_bug.cgi?id=139832
Summary
Plug leak below LLVMCopyStringRepOfTargetData().
Andreas Kling
Reported
2014-12-19 13:05:33 PST
Plug leak below LLVMCopyStringRepOfTargetData().
Attachments
Patch
(1.58 KB, patch)
2014-12-19 13:11 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-12-19 13:11:36 PST
Created
attachment 243571
[details]
Patch
Michael Saboff
Comment 2
2014-12-19 13:33:35 PST
Comment on
attachment 243571
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=243571&action=review
r=me
> Source/JavaScriptCore/ftl/FTLCompile.cpp:648 > + llvm->SetDataLayout(state.module, stringRepOfTargetData);
Does SetDataLayout need the string after it returns or does it copy out its contents?
Andreas Kling
Comment 3
2014-12-19 13:37:47 PST
(In reply to
comment #2
)
> Comment on
attachment 243571
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=243571&action=review
> > r=me
You forgot to tick r+ :-)
> > Source/JavaScriptCore/ftl/FTLCompile.cpp:648 > > + llvm->SetDataLayout(state.module, stringRepOfTargetData); > > Does SetDataLayout need the string after it returns or does it copy out its > contents?
It assigns it to an std::string internally, making a copy.
WebKit Commit Bot
Comment 4
2014-12-19 14:14:25 PST
Comment on
attachment 243571
[details]
Patch Clearing flags on attachment: 243571 Committed
r177597
: <
http://trac.webkit.org/changeset/177597
>
WebKit Commit Bot
Comment 5
2014-12-19 14:14:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug