Plug leak below LLVMCopyStringRepOfTargetData(). <https://webkit.org/b/139832>

Reviewed by Michael Saboff.

LLVMCopyStringRepOfTargetData() returns a strdup()'ed string, so make sure
to free() it after we're done using it.

* ftl/FTLCompile.cpp:
(JSC::FTL::mmAllocateDataSection):


Canonical link: https://commits.webkit.org/157760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177597 268f45cc-cd09-0410-ab3c-d52691b4dbfc